--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/chai":"^4.0.4"
   },
   "scripts": {
-    "test": "mocha -r ts-node/register testsForTS.ts"   
+    "test": "mocha"   
 
   }
 }
